fix overflow for two liners

--- a/css/style.css
+++ b/css/style.css
@@ -312,8 +312,7 @@ body {
     padding: 14px;
 }
 
-.card-details p,
-.card-details h3 {
+.card-details p{
     margin-top: 0;
     margin-bottom: 0;
     font-size: 12.7px;
@@ -326,6 +325,10 @@ body {
 .card-details h3 {
     font-size: 14px;
     font-weight: 800;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .card-info p {
